# PGRich

./: .gitignore  README.md  pyproject.toml
pgrich/: PGRich.py
tests/: Test_PGRIch.py
