[tool.poetry]
name = "pgrich"
version = "0.1.0"
description = "Inspect aspects of a PostgreSQL database cluster via its metadata"
authors = ["Richard Meats <rjmeats@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
rich = "^13.3.1"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
